...
    <string name="set_alarm">Set alarm</string>

    <!-- Setting labels on Set alarm screen: Vibration on or off -->
    <string name="alarm_vibrate">Vibrate</string>

    <!-- Setting labels on Set alarm screen: Repeat -->
    <string name="alarm_repeat">Repeat</string>

    <!-- Setting labels on Set alarm screen: Select alarm ringtone -->
    <string name="alert">Ringtone</string>

    <!-- Setting labels on Set alarm screen: Set time -->
    <string name="time">Time</string>
...

    <!--
         Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to repeat every day
    -->
    <string name="every_day">Every day</string>

    <!--
         Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to never repeat
    -->
...
    <string name="done">Done</string>

    <!-- Revert button when editing an alarm. -->
    <string name="revert">Revert</string>

    <!-- Delete button when editing an alarm. -->
    <string name="delete">Delete</string>

    <!-- Setting title for changing the alarm volume. -->
    <string name="alarm_volume_title">Alarm volume</string>

    <!-- Setting summary for changing the alarm volume. -->
    <string name="alarm_volume_summary">Set the volume of alarms</string>
...
    <string name="control_set_alarm">Set alarm</string>

    <!-- Label on the main screen control used to set alarm when there is already an existing alarm [CHAR LIMIT=30] -->
    <string name="control_set_alarm_with_existing" tools:ignore="MissingTranslation">Alarm set: <xliff:g id="time">%s</xliff:g></string>

    <!-- Textual content of the button to discard the current dialog values and close the dialog -->
    <string name="time_picker_cancel">Cancel</string>
    <!-- Textual content of the button to update an alarm with the current dialog values -->
    <string name="time_picker_set" tools:ignore="MissingTranslation">OK</string>
    <string name="time_picker_time_seperator">:</string>
    <!-- place holder for am/pm label when it is not set -->
    <string name="time_picker_ampm_label">--</string>
    <!-- add 00 as minutes to the time when pressing this button -->
    <string name="time_picker_00_label" tools:ignore="MissingTranslation">:00</string>
    <!-- add 30 as minutes to the time when pressing this button -->
...
