<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <com.rafali.alarm.view.DontPressWithParentLayout
        android:id="@+id/list_row_on_off_checkbox_container"
        style="@style/alarm_list_left_column"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/list_row_on_off_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false" />
        
    </com.rafali.alarm.view.DontPressWithParentLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <com.rafali.alarm.view.DigitalClock
            android:id="@+id/list_row_digital_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/digital_clock_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="6dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/digital_clock_am_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </com.rafali.alarm.view.DigitalClock>

        <TextView
            android:id="@+id/list_row_daysOfWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorTertiary" />
         <TextView
            android:id="@+id/list_row_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorTertiary" />
    </LinearLayout>

    <com.rafali.alarm.view.DontPressWithParentLayout
        android:id="@+id/details_button_container"
        style="@style/alarm_list_left_column"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="···"
            android:textSize="40dp"
            android:textStyle="normal" />
    </com.rafali.alarm.view.DontPressWithParentLayout>

</LinearLayout>