<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_fragment_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/list_fragment_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/list_row"/>

    <fragment
        android:id="@+id/list_activity_info_fragment"
        android:name="com.rafali.alarm.presenter.InfoFragment"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        tools:layout="@layout/info_fragment" />

    <Button
        android:id="@+id/fab"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/add_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>