...
        android:id="@+id/media_route_menu_item"
        android:title="CAST"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always" />

    <item
        android:id="@+id/set_alarm_menu_delete_alarm"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom|withText"
        android:title="@string/delete_alarm"/>
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@android:drawable/ic_menu_preferences"
...
